--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,11 @@
-*.log
-wp-config.php
-wp-content/advanced-cache.php
-wp-content/backup-db/
-wp-content/backups/
-wp-content/blogs.dir/
-wp-content/cache/
-wp-content/upgrade/
-wp-content/uploads/
-wp-content/wp-cache-config.php
-wp-content/plugins/hello.php
-
-/.htaccess
-/license.txt
-/readme.html
-/sitemap.xml
-/sitemap.xml.gz
-.idea
+node_modules/*
+.idea/*
+allegiant.zip
+.gitignore
+.jscsrc
+.jshintignore
+.jshintrc
+.travis.yml
+Gruntfile.js
+package.json
+phpcs.ruleset.xml
